# FinScraper

./: .gitignore  README.md  config.yaml.example  diagnose.py  findings.md  progress.md  pyproject.toml  task_plan.md
docs/: API_REFERENCE.md  CHANGELOG.md  CODING_STANDARDS.md  CONTRIBUTING.md  FAQ.md  GITHUB_RELEASE_v1.0.0.md  PROJECT_SPEC.md  RELEASE_NOTES_v1.0.0.md  USER_GUIDE.md  VIBE_CODING_TEMPLATE.md
docs/plans/: 2026-03-07-phase2-core-framework.md  2026-03-07-phase3-cli-framework.md  2026-03-07-phase4-cli-commands.md  2026-03-07-phase5-basic-fetchers.md  2026-03-07-phase6-full-fetchers.md  2026-03-08-em-interface-fix.md  2026-03-08-metals-report-script.md  2026-03-08-phase7-refinement.md  2026-03-08-phase8-new-data-sources.md  2026-03-08-topic-news-filter.md  2026-03-08-update-documentation.md
finscraper/cli/: __init__.py  main.py  utils.py
finscraper/cli/commands/: __init__.py  commodity.py  fetch_all.py  index.py  money_flow.py  news.py  north_flow.py  sector.py
finscraper/config/: settings.py
finscraper/core/: __init__.py  akshare_client.py  data_cleaner.py  exceptions.py  logger.py  retry.py
finscraper/fetchers/: __init__.py  base.py  commodity.py  forex.py  hk_index.py  index.py  market_sentiment.py  money_flow.py  news.py  north_flow.py  sector.py  us_index.py
finscraper/filters/: __init__.py  topic_config.py  topic_filter.py
finscraper/models/: commodity.py  forex.py  hk_index.py  index.py  market_sentiment.py  money_flow.py  news.py  north_flow.py  sector.py  us_index.py
finscraper/spiders/: base.py
finscraper/storage/: __init__.py  base.py  csv_storage.py  json_storage.py  parquet_storage.py  sqlite_storage.py
finscraper/utils/: requests.py
scripts/: __init__.py  capital_flow_dashboard.py  core_hot.py  core_report.py  example.py  fetch_all.py  four_sectors_report.py  industry_radar.py  market_overview.py  metals_report.py
tests/: test_utils.py
tests/test_cli/: test_index.py  test_main.py  test_north_flow.py  test_sector.py  test_utils.py
tests/test_core/: test_exceptions.py  test_logger.py  test_retry.py
tests/test_fetchers/: test_commodity.py  test_index.py  test_money_flow.py  test_news.py  test_north_flow.py  test_sector.py
tests/test_filters/: test_topic_filter.py
tests/test_models/: test_index.py
